# melkor

./: CMakeLists.txt  Makefile  README.md
src/: main.c
src/melkor/: app.c  app.h  callbacks.c  default_callbacks.c  default_callbacks.h  event.h  melkor.h  window.c  window.h
src/melkor/core/: app.c  app.h  window.c  window.h
src/melkor/event/: callbacks.c  callbacks.h  event.c  event.h
src/melkor/math/: mat4.h  vec2.h  vec3.h
